// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component tests Radio not direct child of radio group 1`] = `
<View
  accessibilityLabel="Uncontrolled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#323130",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Uncontrolled RadioGroup
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio1"
        accessibilityPositionInSet={1}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": false,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key1"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#616161",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 4,
                "height": 8,
                "opacity": 0,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio1
          </Text>
        </View>
      </View>
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio2"
        accessibilityPositionInSet={2}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": true,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key2"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0078d4",
              "borderColor": "#0078d4",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 4,
                "height": 8,
                "opacity": 1,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio2
          </Text>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;

exports[`RadioGroup component tests RadioGroup default 1`] = `
<View
  accessibilityLabel="Uncontrolled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#323130",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Uncontrolled RadioGroup
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="RadioButton1"
        accessibilityPositionInSet={0}
        accessibilityRole="radio"
        accessibilitySetSize={0}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": false,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key1"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#616161",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 4,
                "height": 8,
                "opacity": 0,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            RadioButton1
          </Text>
        </View>
      </View>
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="RadioButton2"
        accessibilityPositionInSet={0}
        accessibilityRole="radio"
        accessibilitySetSize={0}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": true,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key2"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0078d4",
              "borderColor": "#0078d4",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 4,
                "height": 8,
                "opacity": 1,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            RadioButton2
          </Text>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;

exports[`RadioGroup component tests RadioGroup disabled 1`] = `
<View
  accessibilityLabel="Disabled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": true,
      "required": false,
    }
  }
  accessible={true}
  disabled={true}
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#bdbdbd",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Disabled RadioGroup
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio1"
        accessibilityPositionInSet={1}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": true,
            "selected": false,
          }
        }
        accessible={true}
        focusable={false}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key1"
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f0f0f0",
              "borderColor": "#e0e0e0",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 4,
                "height": 8,
                "opacity": 0,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#bdbdbd",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio1
          </Text>
        </View>
      </View>
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio2"
        accessibilityPositionInSet={2}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": true,
            "selected": false,
          }
        }
        accessible={true}
        focusable={false}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key2"
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f0f0f0",
              "borderColor": "#e0e0e0",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 4,
                "height": 8,
                "opacity": 0,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#bdbdbd",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio2
          </Text>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;

exports[`RadioGroup component tests RadioGroup horizontal 1`] = `
<View
  accessibilityLabel="Horizontal RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  layout="horizontal"
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#323130",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Horizontal RadioGroup
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio1"
        accessibilityPositionInSet={1}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": false,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key1"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#616161",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 4,
                "height": 8,
                "opacity": 0,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio1
          </Text>
        </View>
      </View>
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio2"
        accessibilityPositionInSet={2}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": true,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key2"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0078d4",
              "borderColor": "#0078d4",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 4,
                "height": 8,
                "opacity": 1,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio2
          </Text>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;

exports[`RadioGroup component tests RadioGroup horizontal-stacked 1`] = `
<View
  accessibilityLabel="Horizontal-Stacked RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  layout="horizontal-stacked"
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#323130",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Horizontal-Stacked RadioGroup
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio1"
        accessibilityPositionInSet={1}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": false,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="below"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key1"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#616161",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 6,
              "marginRight": 6,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 4,
                "height": 8,
                "opacity": 0,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": 2,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio1
          </Text>
        </View>
      </View>
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio2"
        accessibilityPositionInSet={2}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": true,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="below"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key2"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0078d4",
              "borderColor": "#0078d4",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 6,
              "marginRight": 6,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 4,
                "height": 8,
                "opacity": 1,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": 2,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio2
          </Text>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;

exports[`RadioGroup component tests RadioGroup required 1`] = `
<View
  accessibilityLabel="Required RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    Object {
      "disabled": false,
      "required": true,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    Object {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#323130",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Required RadioGroup
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      onAccessibilityTap={[Function]}
      style={
        Object {
          "color": "#750b1c",
          "fontFamily": "Segoe UI",
          "fontSize": 16,
          "fontWeight": "600",
          "margin": 0,
          "paddingStart": 4,
        }
      }
    >
      *
    </Text>
  </View>
  <RCTFocusZone
    navigateAtEnd="NavigateWrap"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio1"
        accessibilityPositionInSet={1}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": false,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key1"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#616161",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": undefined,
                "borderRadius": 4,
                "height": 8,
                "opacity": 0,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio1
          </Text>
        </View>
      </View>
      <View
        accessibilityActions={
          Array [
            Object {
              "name": "Select",
            },
          ]
        }
        accessibilityLabel="Radio2"
        accessibilityPositionInSet={2}
        accessibilityRole="radio"
        accessibilitySetSize={2}
        accessibilityState={
          Object {
            "disabled": false,
            "selected": true,
          }
        }
        accessible={true}
        focusable={true}
        keyDownEvents={
          Array [
            Object {
              "key": "ArrowDown",
            },
            Object {
              "key": "ArrowRight",
            },
            Object {
              "key": "ArrowUp",
            },
            Object {
              "key": "ArrowLeft",
            },
          ]
        }
        labelPosition="after"
        onAccessibilityAction={[Function]}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "paddingHorizontal": 4,
            "paddingVertical": undefined,
          }
        }
        value="key2"
      >
        <View
          accessible={false}
          focusable={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0078d4",
              "borderColor": "#0078d4",
              "borderRadius": 8,
              "borderStyle": "solid",
              "borderWidth": 1,
              "height": 16,
              "justifyContent": "center",
              "marginBottom": 6,
              "marginLeft": 4,
              "marginRight": 4,
              "marginTop": 6,
              "width": 16,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 4,
                "height": 8,
                "opacity": 1,
                "width": 8,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 2,
              "flexDirection": "column",
              "marginLeft": 0,
              "marginRight": 0,
              "padding": undefined,
              "paddingRight": 0,
            }
          }
        >
          <Text
            ellipsizeMode="tail"
            numberOfLines={0}
            onAccessibilityTap={[Function]}
            style={
              Object {
                "color": "#242424",
                "fontFamily": "Segoe UI",
                "fontSize": 16,
                "fontWeight": "400",
                "margin": 0,
                "marginHorizontal": 2,
                "marginVertical": 2,
              }
            }
          >
            Radio2
          </Text>
        </View>
      </View>
    </View>
  </RCTFocusZone>
</View>
`;
